1/26/2025 ter
	Added additional test case, and fixed some bugs that arose from its incorporation.
	Implemented remote clone cell contraint, and added test case.

1/26/2025 bis
	Added support for conditional sum lines, the line version of hanging sums.
	Added new selection criterion for hanging sums: uniparity, where all odds or evens are chosen.
	The same bug from implementing lots reared its head a couple more times, smashed down again.
	Added test case.

1/26/2025
	Added support for copycat cells, and added a test case.
	Implementation discovered a bug in selection for hanging clues/lots which is fixed.

1/25/2025 bis
	Added support for Dutch flat mates, and a test case.

1/25/2025
	Reconfigured select and terminate criteria to unify code behind Parity, Modular, Entropy and Primality. Makes addition of
	any other digit classifications pretty straightforward.
	Implemented new selection criteria: 'ParityMatch' (and EntropyMatch...), and Unique Digits.
	Implemented support for lot lines (Issue #60) 
	
1/24/2025
	Added depth support to skyscrapers clues, so that clues only "see" a fixed number of cells into the puzzle
	Added test cases.
	Moved row/col condition selector to a utility function, simplifying HangingSum implementation, and allowing code to be repurposed for XCount.
	Added an 'Indexed' termination constraint to the hanging code, so that termination can be picked via indexing, a la XSums. While XSums can now be implemented as Hanging Sums, the implementation is quite a bit slower.
	Implemented XCount and XAverage clues via analogous HangingCount and HangingAverage. Added test cases.
	Added 'DigitSet', 'BeforeDigit' and 'AfterDigit' selection criteria for hanging clues.

1/23/2025bis
	Added some test cases.
	Added support for neighbor sets, which assert a cell has a neighbor matching on some property.
	Added additional features to X-Sums, which allows the cell which picks the length of the sum to be in the first given number of cells, or in the first region.